--- a/c#/packages/repositories.config
+++ b/c#/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\abstractfactory\packages.config" />
+  <repository path="..\adapter\packages.config" />
 </repositories>
